Center/align feature labels properly with their feature.
