# apps/api/src/app/modules/spatial-feature/spatial-feature.dto.ts
@@ -16,6 +16,9 @@ export class SpatialFeaturePublicResponse {
     @ApiProperty({ description: 'Format: GeoJSON Geometry object' })
     geometry: object;
 
+    @ApiProperty({ description: 'Format: GeoJSON Point' })
+    centroid: object;
+
     @ApiProperty({ description: 'Format: YYYY-MM-DD'})
     plannedDevelopmentDate: string;
   
